--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.5",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
